--- a/src/main/resources/br/edu/ifba/saj/fwads/controller/LoginAC.fxml
+++ b/src/main/resources/br/edu/ifba/saj/fwads/controller/LoginAC.fxml
@@ -8,12 +8,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="148.0" fitWidth="219.0" layoutX="40.0" layoutY="93.0" pickOnBounds="true">
          <image>
-            <Image url="@../../../../../../../../../../../../Downloads/logo_reduzida-removebg-preview.png" />
+            <Image url="@assets/LogoReduzida.png" />
          </image>
       </ImageView>
       <TextField layoutX="344.0" layoutY="122.0" />
