--- a/src/main/resources/br/edu/ifba/saj/fwads/controller/User.fxml
+++ b/src/main/resources/br/edu/ifba/saj/fwads/controller/User.fxml
@@ -14,7 +14,7 @@
    <children>
       <ImageView fitHeight="148.0" fitWidth="214.0" layoutX="25.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../../../../../../Downloads/logo_reduzida-removebg-preview.png" />
+            <Image url="@assets/LogoReduzida.png" />
          </image>
       </ImageView>
       <Text layoutX="282.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID:" />
